--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>PurpleCoin</title>
+	<link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center;
