--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
             font-weight: bold;
             background-color: #181918; /* Светлый фон */
             font-family: 'Poppins', sans-serif; /* Шрифт */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         }
         h1 {
             color: #8b5bb7; /* Цвет заголовка */
             font-size: 48px; /* Размер заголовка */
             margin-bottom: 10px; /* Отступ снизу */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		}
         h2 {
             color: #8b5bb7; /* Цвет заголовка */
             font-size: 18px; /* Размер заголовка */
             margin-bottom: 10px; /* Отступ снизу */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         }
         #score {
             font-size: 40px; /* Размер для очков */
             color: #8b5bb7; /* Цвет очков */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		}
         #click-button {
             padding: 15px 30px; /* Отступы кнопки */
@@ -36,6 +40,7 @@
             color: white; /* Цвет текста на кнопке */
             border: none; /* Убираем рамку */
             transition: background-color 0.3s; /* Анимация при наведении */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		}
 
         a {
@@ -48,6 +53,7 @@
             border-radius: 5px;
             transition: background-color 0.3s ease, transform 0.3s ease; /* Плавный переход */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для кнопок */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         }
         #beaver-image {
             width: 150px; 
@@ -58,19 +64,25 @@
             border-radius: 10px; /* Скругление углов рамки */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Тень */
             margin-bottom: 20px; /* Отступ снизу изображения */
+			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         }
     </style>
 </head>
 <body>
     <h1>PURPLECOIN</h1>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<img id="beaver-image" src="https://play-lh.googleusercontent.com/Q7R2B2fbLxwBKPz0u0OcBbyaK_-xhlZis96dGq1ob2o7cBK_UaS4tjCV0qkbD0GOzgE" alt="purplecointonhub">
 	<p><span id="score">0</span></p>
 	</div>
     <div class="tabs">
 		<a href="index.html" target="_blank">Play-to-Earn</a>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<a href="Friends.html" target="_blank">Friends</a>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<a href="https://tonkeeper.com" target="_blank">Wallet</a>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<a href="AirDrop.html" target="_blank">AirDrop</a>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
      <button id="click-button"></button>
 	
     <script>
